Revision history for Hailo

{{$NEXT}}

0.28 2010-03-13 10:05:57

    - Update README.pod which hadn't been bumped since 0.25

    - Fix example in Hailo.pm's SYNOPSIS that didn't work and add an
      example for a bare ->reply().

    - Fix some code perlcritic whined about.

0.27 2010-03-13 09:41:46

    - Stop depending on Term::ReadLine::Gnu and use Term::ReadLine
      instead. I tested Term::ReadLine once and found that it was
      really bad (no history, C-p, C-n etc.) but now with
      PERL_RL='Perl o=0' everything's magically awesome in it.

      Term::ReadLine::Gnu was the #1 cause of our test failures so
      it's good not to depend on it.

      Also only set PERL_RL if it isn't set already.

0.26 2010-03-13 08:04:32

    - Split the X::Getopt parts of Hailo into Hailo::Command. This way
      the speed / memory penalty of loading all the command-line
      related modules is only applicable if running the command-line
      interface. using Hailo takes 1MB less memory now and loads a
      total of 56 modules instead of 74.

    - Due to the split it was possible to rename the `brain_resource'
      attribute to `brain'. The former is still provided for backwards
      compatibility.

    - A lot of miscellaneous cleanups in the code made possible by
      splitting the core of Hailo from the command line UI.

    - DEMOLISH was broken. it would build storage objects during
      global destruction if they didn't exist.

    - Add --examples switch to be used as --help --examples, examples
      are now not part of --help by default since they took up most of
      the terminal & obscured the option help output.

    - A lot has been changed in the test suite. Below is a partial
      summary:

    - Test the ->run method in Hailo::Command completely. Previously
      only a subset of its functionality was tested. The only thing
      that isn't tested completely is the invocation of
      Hailo::UI::ReadLine via ->run.
