@@ -67,7 +67,6 @@ namespace::clean          = 0.13
 ;DBD::Pg                   = 2.16.1
 
 ;; Test-requires
-Data::Random              = 0.05
 File::Slurp               = 9999.13
 Test::Exception           = 0.29
 Test::More                = 0.94
